# amax-ads

./: .gitignore  Cargo.toml  README.md  readme.md
.github/workflows/: rust.yml
src/: advert_manager.rs  cache.rs  download.rs  dx_tools.rs  file_utils.rs  hooks.rs  lib.rs
